<resources>
    <string name="app_version">1.1.1a</string>
    <string name="app_name">Transvargo</string>
    <string name="app_spec">Drivers</string>
    <string name="app_full_name">Transvargo Drivers</string>
    <string name="api_map_key">AIzaSyBX8d56y_BUiYA_m9WfrKbTeFPaOEAGuVw</string>

    <string name="menu_offres">Offres</string>
    <string name="menu_expeditions">Mes expéditions</string>
    <string name="menu_profile">Profil</string>

    <string name="title_activity_demarrage">Demarrage</string>
    <string name="title_activity_login">Connexion</string>
    <string name="title_activity_details_offre">Details de l\'offre</string>
    <string name="title_activity_reservation">Réserver une offre</string>

    <string name="login_email">Email ou n° téléphone</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_btn_connexion">Connexion</string>
    <string name="login_btn_switch_mode_chauffeur">Vous êtes un chauffeur ?</string>
    <string name="login_btn_switch_mode_proprietaire">Vous êtes un propriétaire ?</string>
    <string name="login_chauffeur_connexion">Connexion chauffeur</string>
    <string name="login_chauffeur_login">Immatriculation</string>
    <string name="login_chauffeur_password">Téléphone</string>

    <string name="menu_profil">Mon profil</string>
    <string name="menu_deconnexion">Déconnexion</string>
    <string name="menu_quit">Quitter</string>

    <string name="title_details_marchandise">Marchandises</string>
    <string name="title_details_options">Transport</string>
    <string name="title_details_affectation">Affectation</string>
    <string name="title_details_masse">Masse</string>
    <string name="title_details_camion">Type camion</string>
    <string name="title_prix">Rémunération</string>
    <string name="title_chauffeur">Chauffeur</string>
    <string name="title_details_fragile">Fragile</string>
    <string name="title_details_distance">Distance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_chargement">Mes chargements</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
</resources>
