<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transvargo.transvargo.Login"
    android:background="@drawable/login_background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/login_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/liste_apparence">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/textStyle_primary_bold"
                    android:text="@string/login_chauffeur_connexion"
                    />

                <View
                    android:layout_width="170dp"
                    android:layout_height="3dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="10dp"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login_chauffeur_login"
                    style="@style/textStyle_primary_bold"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@+id/txtlogin_chauffeur"/>

                <EditText
                    android:id="@+id/txtlogin_chauffeur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:hint="XXXX XX XX"
                    android:textSize="@dimen/text_normal"
                    android:inputType="text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login_chauffeur_password"
                    style="@style/textStyle_primary_bold"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@+id/txtpassword_chauffeur"/>

                <EditText
                    android:id="@+id/txtpassword_chauffeur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:textSize="@dimen/text_normal"
                    android:hint="XX XX XX XX"
                    android:inputType="textPassword"/>

                <Button
                    android:id="@+id/btnconnexion_chauffeur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_btn_connexion"
                    android:textColor="#FFF"
                    android:clickable="true"
                    android:focusable="true"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_normal"
                    android:background="@drawable/button_alt"/>

                <Button
                    android:id="@+id/btnmodeproprietaire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_btn_switch_mode_proprietaire"
                    android:textColor="@color/colorPrimary"
                    android:clickable="true"
                    android:focusable="true"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_normal"
                    android:background="#fff"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10" />

        </LinearLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
