<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transvargo.transvargo.DetailsChargement">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:background="@drawable/shadow">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:src="@mipmap/ic_expediteur"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="9dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_dtls_chgmt_expediteur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Will Koffi"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_normal"/>

                <TextView
                    android:id="@+id/txt_dtls_chgmt_societe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Socotaf Bouaké"
                    android:textColorLink="@color/colorBackground"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_descri"/>

            </LinearLayout>

            <Button
                android:paddingRight="5dp"
                android:id="@+id/btn_dtls_chgmt_call"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textDirection="rtl"
                android:layout_gravity="center"
                android:background="@mipmap/ic_call"
                android:rotation="10"/>

        </LinearLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:apiKey="@string/api_map_key"
            android:clickable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_details_marchandise"
            android:textStyle="bold"
            android:textSize="@dimen/text_h1"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:background="@drawable/liste_apparence">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_normal"
                    android:text="@string/title_details_masse"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_dtls_chgmt_masse"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:text="3,4 tonnes"
                    android:textAlignment="viewEnd"
                    android:textSize="@dimen/text_normal"
                    android:layout_weight="1"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black_overlay"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_normal"
                    android:text="@string/title_details_fragile"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_dtls_chgmt_fragile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:text="Oui"
                    android:textAlignment="viewEnd"
                    android:textSize="@dimen/text_normal"
                    android:layout_weight="1"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black_overlay"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_normal"
                    android:text="@string/title_details_distance"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_dtls_chgmt_distance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:text="526 km"
                    android:textAlignment="viewEnd"
                    android:textSize="@dimen/text_normal"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_dtls_chgmt_demarrer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button"
            android:clickable="true"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="démarrer le chargement"
            android:textSize="@dimen/text_h1"
            android:textStyle="bold"
            android:textColor="@color/color_white" />
    </LinearLayout>

</ScrollView>
