<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transvargo.transvargo.Login"
    android:background="@drawable/login_background">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/login_background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/liste_apparence">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/textStyle_primary_bold"
                    android:text="@string/login_btn_connexion"
                    />

                <View
                    android:layout_width="130dp"
                    android:layout_height="3dp"
                    android:background="@color/colorSupp"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="10dp"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login_email"
                    style="@style/textStyle_primary_bold"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@+id/txtlogin"/>

                <EditText
                    android:id="@+id/txtlogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:hint="Email ou n° de téléphone"
                    android:textSize="@dimen/text_normal"
                    android:inputType="text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login_password"
                    style="@style/textStyle_primary_bold"
                    android:layout_marginBottom="5dp"
                    android:labelFor="@+id/txtpassword"/>

                <EditText
                    android:id="@+id/txtpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:textSize="@dimen/text_normal"
                    android:hint="Mot de passe ..."
                    android:inputType="textPassword"/>

                <Button
                    android:id="@+id/btnconnexion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_btn_connexion"
                    android:textColor="#FFF"
                    android:clickable="true"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_normal"
                    android:background="@drawable/button"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"/>

        </LinearLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
